--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
@@ -19,7 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.SignInActivity"
             android:label="@string/title_activity_sign_in"
@@ -28,7 +26,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.RegisterActivity"
             android:label="@string/title_activity_register"
@@ -37,17 +34,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.RecommendedArtistsActivity"
             android:label="@string/title_activity_recommended_artists" >
         </activity>
-
         <activity
             android:name=".activity.GenreActivity"
             android:label="@string/title_activity_genre" >
         </activity>
-
+        <activity
+            android:name=".activity.ArtistActivity"
+            android:label="@string/title_activity_artist"
+            android:parentActivityName=".activity.RecommendedArtistsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.zakarie.musicify.activity.RecommendedArtistsActivity" />
+        </activity>
     </application>
 
 </manifest>
